force-app/main/default/objects/AV_CustomActivityOpportunity__c/AV_CustomActivityOpportunity__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los datos de la relación N:M entre Tarea y Oportunidad.</description>
    <label>Tarea-Oportunidad</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tarea.Oportunidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarea-Oportunidad</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>