force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>AV_ActivityDate__c</fullName>
    <description>Fecha de vecimiento de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>