force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Amount__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>