force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_AmountEuro__c.field-meta.xml
<CustomField>
    <fullName>AV_AmountEuro__c</fullName>
    <description>Cantidad del importe de la tarea oportunidad</description>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>