force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_ByProduct__c.field-meta.xml
<CustomField>
    <fullName>AV_ByProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Almacena el subproducto que tiene la tarea oportunidad</description>
    <label>Subproducto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tarea-Oportunidad (Subproducto)</relationshipLabel>
    <relationshipName>AV_ByProduct</relationshipName>
    <type>Lookup</type>
</CustomField>