force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Concepto1__c.field-meta.xml
<CustomField>
    <fullName>AV_Concepto1__c</fullName>
    <description>Campo para almacenar el concepto1 de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>&gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>