force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_DischargeDate__c.field-meta.xml
<CustomField>
    <fullName>AV_DischargeDate__c</fullName>
    <description>Campo de fecha de alta de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Alta</label>
    <type>Date</type>
</CustomField>