force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_DueDate__c.field-meta.xml
<CustomField>
    <fullName>AV_DueDate__c</fullName>
    <description>Fecha de cierre de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>