force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Entity__c.field-meta.xml
<CustomField>
    <fullName>AV_Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>