force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>AV_FeeAmount__c</fullName>
    <description>Importe cuota de la tarea oportunidad</description>
    <label>Importe Cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>