force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Gestor__c.field-meta.xml
<CustomField>
    <fullName>AV_Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contiene el valor del empleado/a asignado de tarea oportunidad</description>
    <label>Empleado/a Asignado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tarea-Oportunidad</relationshipLabel>
    <relationshipName>Tarea_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>