force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_HoldingAnotherEntity__c.field-meta.xml
<CustomField>
    <fullName>AV_HoldingAnotherEntity__c</fullName>
    <description>Tenencia en otra entidad de la tarea</description>
    <label>Tenencia en otra entidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Tiene producto en otra entidad</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No tiene producto en otra entidad</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>No informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>