force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_IsMain__c.field-meta.xml
<CustomField>
    <fullName>AV_IsMain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para saber si la oportunidad es principal</description>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>