force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_MarginEuro__c.field-meta.xml
<CustomField>
    <fullName>AV_MarginEuro__c</fullName>
    <description>Margen previsto de la tarea oportunidad</description>
    <label>Margen Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>