force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_NextEventDate__c.field-meta.xml
<CustomField>
    <fullName>AV_NextEventDate__c</fullName>
    <description>Fecha de proxima evento de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha próximo evento</label>
    <type>Date</type>
</CustomField>