force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad asociada</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tarea-Oportunidad</relationshipLabel>
    <relationshipName>Tarea_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>