force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_OrigenApp__c.field-meta.xml
<CustomField>
    <fullName>AV_OrigenApp__c</fullName>
    <description>Aplicación origen que ha creado el registro</description>
    <label>Aplicación origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AV_OrigenApp</valueSetName>
    </valueSet>
</CustomField>