force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Priority__c.field-meta.xml
<CustomField>
    <fullName>AV_Priority__c</fullName>
    <description>Campo expectativa de venta de tarea oportunidad</description>
    <label>Expectativa de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Muy Alta</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>VP</fullName>
                <label>Venta programada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>