force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Product__c.field-meta.xml
<CustomField>
    <fullName>AV_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tarea-Oportunidad</relationshipLabel>
    <relationshipName>Tarea_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>