force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>AV_Resolucion__c</fullName>
    <label>Resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elige otra entidad por precio</fullName>
            </value>
            <value>
                <fullName>Elige otra entidad características por producto</fullName>
            </value>
            <value>
                <fullName>No le interesa por precio</fullName>
            </value>
            <value>
                <fullName>No le interesa por las características del producto</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
                <label>Perfil cliente inadecuado</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>VD</fullName>
                <label>Venta desestimada</label>
            </value>
            <value>
                <fullName>CDP</fullName>
                <isActive>false</isActive>
                <label>CDP</label>
            </value>
            <value>
                <fullName>MOEOE</fullName>
                <isActive>false</isActive>
                <label>MOEOE</label>
            </value>
            <value>
                <fullName>NLIEP</fullName>
                <isActive>false</isActive>
                <label>NLIEP</label>
            </value>
            <value>
                <fullName>PDP</fullName>
                <isActive>false</isActive>
                <label>PDP</label>
            </value>
            <value>
                <fullName>PELC</fullName>
                <isActive>false</isActive>
                <label>PELC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>