force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>AV_ReviewDate__c</fullName>
    <description>Fecha de proxima gestión de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de próxima gestión</label>
    <type>Date</type>
</CustomField>