force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Stage__c.field-meta.xml
<CustomField>
    <fullName>AV_Stage__c</fullName>
    <description>Campo donde almacena el estado de la tarea oportunidad</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>En gestión/insistir</fullName>
            </value>
            <value>
                <fullName>Cerrado positivo</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Con venta</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>No apto</fullName>
            </value>
            <value>
                <fullName>CIBE_Cerrado positivo</fullName>
            </value>
            <value>
                <fullName>CIBE_Vencido</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>En curso</fullName>
            </value>
            <value>
                <fullName>Cerrado negativo</fullName>
            </value>
            <value>
                <fullName>CIBE_Pendiente_Firma</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>