force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Status__c.field-meta.xml
<CustomField>
    <fullName>AV_Status__c</fullName>
    <description>Estados de la tarea</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Pendiente no localizado</fullName>
            </value>
            <value>
                <fullName>Gestionada positiva</fullName>
            </value>
            <value>
                <fullName>Gestionada negativa</fullName>
            </value>
            <value>
                <fullName>Gestionado no localizado</fullName>
            </value>
            <value>
                <fullName>No gestionada</fullName>
            </value>
            <value>
                <fullName>Desactivada</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Completado</label>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>