force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Task__c.field-meta.xml
<CustomField>
    <fullName>AV_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tarea asociada</description>
    <label>Tarea</label>
    <referenceTo>AV_HeaderCustomActivity__c</referenceTo>
    <relationshipLabel>Tarea-Oportunidad</relationshipLabel>
    <relationshipName>Tarea_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>