force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_TypeOfInterest__c.field-meta.xml
<CustomField>
    <fullName>AV_TypeOfInterest__c</fullName>
    <description>Tipo de interes de la tarea</description>
    <label>Tipo de Interés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>