force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_Valor1__c.field-meta.xml
<CustomField>
    <fullName>AV_Valor1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>-</label>
    <length>255</length>
    <type>Text</type>
</CustomField>