force-app/main/default/objects/AV_CustomActivityOpportunity__c/fields/AV_WarningDate__c.field-meta.xml
<CustomField>
    <fullName>AV_WarningDate__c</fullName>
    <description>Campo de fecha de aviso de la tarea oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Aviso</label>
    <type>Date</type>
</CustomField>