force-app/main/default/objects/AV_CustomActivityOpportunity__c/recordTypes/AV_TareaOpportunidad.recordType-meta.xml
<RecordType>
    <fullName>AV_TareaOpportunidad</fullName>
    <active>true</active>
    <label>Tarea-Oportunidad</label>
</RecordType>